# launcher-tauri

./: LICENSE  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/src/auth/: api.rs  discord.rs  error.rs  mod.rs  models.rs  token.rs
src-tauri/src/config/: error.rs  manager.rs  mod.rs  models.rs
src-tauri/src/proxy/: download.rs  error.rs  manager.rs  mod.rs  models.rs
src-tauri/src/rpc/: manager.rs  mod.rs
src/components/: action-rail.tsx  logo.tsx  main-view.tsx  onboarding.tsx  service-status.tsx  shell.tsx  theme-provider.tsx  titlebar.tsx  whats-new.tsx
src/components/dialogs/: donations.tsx  enable-beta.tsx  proxy-error.tsx  restart-pending.tsx  rpc-customize.tsx  subscriptions.tsx
src/components/nav/: action-rail.tsx  donate-button.tsx  subscribe-banner.tsx  subscribe-button.tsx  theme-switcher.tsx  user-button.tsx
src/components/proxy/: launch-button.tsx
src/components/settings/: button.tsx  input.tsx  section.tsx  switch.tsx  theme.tsx
src/components/tabs/: home-tab.tsx  logs-tab.tsx  settings-tab.tsx  stats-tab.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  pagination.tsx  popover.tsx  skeleton.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/lib/: brand-color.ts  config.ts  discord.ts  hex.ts  notification.ts  onboarding.tsx  perm.ts  proxy-logs.ts  tabs.tsx  token.ts  updater.ts  window.ts
src/settings/: defaults.ts  definitions.ts
src/styles/: globals.css
src/types/: config.ts  proxy.ts
