[package]
name = "launcher-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "launcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"

