[package]
name = "launcher-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "launcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
open = "5"
directories = "5"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
discord-rich-presence = "0.2"
chrono = "0.4"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"

